# StudyKFPipeline

./: .gitignore  README.md  minio_pipeline.py  pipeline1_create_dataset_artifect.py  pipeline2_download_dataset.py  pipeline_tutorial.py  pyproject.toml  test.py  tuto_katib.py  tuto_katib_in_pipe.py  tuto_pipe.py
.agents/skills/skill_template/: SKILL.md
gather_dataset/: gather_cifar.py
