[project]
name = "study-kubeflow-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "copperlight",email = "gmanhdh@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "kfp (>=2.16.0,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)"
]

[tool.pyright]
include = [".venv"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
